feat : first commit and fix the lines

--- a/UK Cities/UK_cities.ipynb
+++ b/UK Cities/UK_cities.ipynb
@@ -12,6 +12,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Precaution install the folium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install folium package\n",
+    "!pip install folium"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -547,6 +564,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Declare the coordinate"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -591,6 +615,13 @@
     "    ).add_to(m)\n",
     "    \n",
     "m.save(\"uk_cities_population.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Declare the map in new lines to show output"
    ]
   },
   {
@@ -1718,6 +1749,11 @@
    "source": [
     "m"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
