--- a/UK Cities/UK_cities.ipynb
+++ b/UK Cities/UK_cities.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "# Install folium package\n",
-    "!pip install folium"
+    "%pip install folium"
    ]
   },
   {
