Google colab url added

--- a/UK Cities/UK_cities.ipynb
+++ b/UK Cities/UK_cities.ipynb
@@ -1753,7 +1753,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Note: if the map does not show up, please visit: [Google Colab: UK Cities Map](https://colab.research.google.com/github/winnie-2018/python_sub_studies/blob/main/UK%20Cities/UK_cities.ipynb)"
+   ]
   }
  ],
  "metadata": {
